# Own-Language-FREEDOM-

./: BinOpNode.cpp  BinOpNode.h  CMakeLists.txt  Core.cpp  Core.h  Error.cpp  Error.h  FreedomLanguage.h  Lexer.cpp  Lexer.h  Monster++.cpp  Monster++.vcxproj  Monster++.vcxproj.filters  Nodes.h  NumberNode.cpp  NumberNode.h  Order.h  Parser.cpp  Parser.h  Position.cpp  Position.h  README.md  Token.cpp  Token.h  a.in  fizzbuzz.txt  main.cpp
Classes/: Core.cpp  Lexer.cpp  Parser.cpp  Position.cpp  Token.cpp
Debug/: Monster++.exe.recipe  Monster++.ilk  Monster++.vcxproj.FileListAbsolute.txt  vc142.idb
Debug/Monster++.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Monster++.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Examples/: a.in  fizzbuzz.txt
Headers/: Core.h  Lexer.h  Order.h  Parser.h  Position.h  Token.h
headers/: Core.h  Lexer.h  Order.h  Parser.h  Position.h  Token.h
